added signin and signup pages

--- a/src/assets/css/dropdown.module.css
+++ b/src/assets/css/dropdown.module.css
@@ -18,6 +18,9 @@
   cursor: pointer;
 }
 
-.dropdown ul li:hover {
+.dropdown ul li:hover,
+.dropdown ul li a:hover {
+  color: var(--main-color);
   background-color: var(--light-gray);
+  text-decoration: none;
 }
