--- a/src/assets/css/hero.module.css
+++ b/src/assets/css/hero.module.css
@@ -1,12 +1,11 @@
 .container {
   background-size: cover;
-  background-position: center 40%;
+  background-repeat: no-repeat;
+  background-position: left 40%;
   height: 450px;
   width: 100%;
   display: flex;
-  justify-content: flex-start;
   align-items: center;
-  padding-left: 25px;
 }
 
 @media (min-width: 768px) {
@@ -17,9 +16,9 @@
 
 .h1 {
   font-size: 4rem;
-  width: 50%;
+  width: 70%;
+  text-align: start;
   color: var(--secondary-color);
   line-height: 72px;
-  position: absolute;
   font-weight: 700;
 }
