ready for production

--- a/src/assets/css/overlay.module.css
+++ b/src/assets/css/overlay.module.css
@@ -1,5 +1,5 @@
 .overlay {
-  height: 300px;
+  height: 100%;
   background-color: rgba(0, 0, 0, 0.45);
   background: "url(data:;base64,iVBORw0KGgoAAAANSUhEUgAAAAIAAAACCAYAAABytg0kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8YQUAAAAgY0hSTQAAeiYAAICEAAD6AAAAgOgAAHUwAADqYAAAOpgAABdwnLpRPAAAABl0RVh0U29mdHdhcmUAUGFpbnQuTkVUIHYzLjUuNUmK/OAAAAATSURBVBhXY2RgYNgHxGAAYuwDAA78AjwwRoQYAAAAAElFTkSuQmCC) repeat scroll transparent9";
   z-index: 999;
